static/css/style.css
@import url("https://fonts.googleapis.com/css?family=Oswald:100,200,300,400,500,600,700|Roboto:100,200,300,400,500,600,700");

body {
  background: url("../images/background.jpg") no-repeat bottom right fixed;
  height: 100vh;
  width: 100vw;
  background-size: 100%;
  margin-top: 0;
  font-family:"Oswald", sans-serif;
  background-color: #F9F9F9;
}

.jumbotron {
    background-color: #a2a2a2f0;
    text-align: center;
    margin-top: 10%;
    border-radius: 10px;
}



.about-logo {
    color: red;
}

.error404 {
    align-content: center;
    margin-top: 9%;
    padding: 5%;
    border-radius: 10px;
    text-align: center;
    background-color: #a2a2a2f0;
}

/*----------------------------Navbar----------------- */


.brand-name {
    color: red;
    font-family: "Oswald", sans-serif;
    font-size: 40px;
    font-weight: 500;
    text-transform: uppercase;
    text-decoration: none;
}

.brand-name:hover {
    color: black;
    transition: ease-in-out;
}

#navbarDropdown {
    color: red;
    border: none;
}

.dropdown-item {
    color: red;
    border: none;
}

.nav-link {
    color: red;
}

/*----------------------------Video Container----------------- */


.video-block {
  background-color: rgba(48, 48, 48, 0.96);
  padding: 1%;
  width: 30%;
  margin: 1.5%;
  position:relative;
  float:left;
  height: 33%;
  border-radius: 10px;
  color: white;
  text-transform: capitalize;
}

.video-content {
    width: 100%;
    height:100%;
    overflow:hidden;
    display:inline-block;
    align-items: center;

}

.title {
    display: inline-block;
    font-size: 20px;
    font-weight: 500;
    padding-top: 2%;
    padding-bottom: 4%;
    margin-left: 2%;
}

.edit_icon {
        display: inline-block;
        float: right;
        text-decoration: none;
        padding-top: 2%;
        padding-bottom: 4%
}

.material-icons {
    color: red;
}
.material-icons:hover {
    color:red;
}
.video {
    width:100%;
}

.video_brand {
    color: white;
    margin-left: 2%;
}

/*----------------------------Add video block----------------- */

.addvideo {
    padding: 3%;
    margin-top: 10%;
    background-color: rgba(48, 48, 48, 0.96);
    border-radius: 20px;
    color: #DC3545;
    font-family: "Oswald", sans-serif;
    font-size: 20px;
    font-weight: 500;
}

.addvideo-header {
    padding-bottom: 5%;
    color: white;
}

.form-group {
    text-align: center;
}
/*----------------------------Container----------------- */
.container {
    padding-top: 2%;
    margin-left: 5%;
    margin-right: 5%;
    margin: 0 auto;
}

/*----------------------------Search by Brand page header----------------- */

.catagory-title {
    text-align: center;
    font-size: 80px;
    color: red;
    font-weight: 800;
    background-color:  rgba(48, 48, 48, 0.96); 
     border-radius: 20px;
    margin: 0 auto;
    padding: 2%;
}

/*----------------------------Ipad/horizontal mobile screen----------------- */


@media screen and (max-width: 1200px) {

    .video-block {
  background-color: rgba(48, 48, 48, 0.96);
  padding: 1%;
  width: 45%;
  margin: 1.5%;
  position:relative;
  float:left;
  height: 33%;
  border-radius: 10px;
  color: white;
  text-transform: capitalize;
    }
}

/*----------------------------Mobile screen----------------- */


@media screen and (max-width: 750px) {
     .video-block {
  background-color: rgba(48, 48, 48, 0.96);
  padding: 1%;
  width: 90%;
  margin: 1.5%;
  position:relative;
  float:left;
  height: 33%;
  border-radius: 10px;
  color: white;
  text-transform: capitalize;
    }
    .brand-name {
        font-size: 29px;
    }
    .error404 {
        margin: 5%;
    }
    .video-content {
    padding-left: 5%;
    }

    .form-group {
    text-align: left;
}
}

/*----------------------------Iphone 5/SE screen----------------- */


@media screen and (max-width: 320px) {

    .brand-name {
        font-size: 25px;
    }
}

